opam-version: "1.2"
maintainer: "Aaron L. Zeng <me@bcc32.com>"
authors: "Aaron L. Zeng <me@bcc32.com>"
homepage: "https://github.com/bcc32/ecaml-hello"
bug-reports: "https://github.com/bcc32/ecaml-hello/issues"
license: "MIT"
doc: "https://github.com/bcc32/ecaml-hello/blob/master/README.md"
tags: ["ecaml" "emacs" "opam"]
dev-repo: "https://github.com/bcc32/ecaml-hello"
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: ["jbuilder" "runtest" "-p" name "-j" jobs]
depends: [
  "jbuilder" {build}
  "ecaml" {build & <= "v0.9.0"}
]
